--- a/css/initial.css
+++ b/css/initial.css
@@ -707,7 +707,7 @@ h1 {
 	position: relative;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 649px) {
 	h1 {
 		margin: 1.25em 0 0.5em 0;
 	}
